istio.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: musik-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: page
spec:
  hosts:
    - "*"
  gateways:
    - musik-gateway
  http:
    - route:
        - destination:
            host: page
            port:
              number: 5000
